--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -14,8 +14,6 @@
       background-color: #222;
       margin: 0;
       padding: 0;
-
-
     }
 
     .chat-container {
@@ -42,7 +40,7 @@
 
     .chat-messages {
       padding: 10px;
-      max-height: 300px;
+      height: 70vh;
       overflow-y: auto;
       border-radius: 25px;
     }
