--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -21,7 +21,6 @@
       font-size: 20px;
       color: #ffffff;
       margin: 20px auto;
-      border: 3px double #ffffff;
       border-radius: 5px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       background-color: rgb(127, 173, 130);
@@ -31,7 +30,6 @@
     .chat-header {
       background-color: #366d2b;
       padding: 10px;
-      border: 3px double #ffffff;
       text-align: center;
       color: #ffffff;
       border-top-left-radius: 25px;
@@ -67,16 +65,15 @@
       display: flex;
       justify-content: space-between;
       padding: 10px;
-      border-top: 1px solid #ccc;
       border-radius: 20px;
+      background-color: #fff;
     }
 
     .chat-input input {
       flex: 1;
       padding: 5px;
-      border: 1px solid #ccc;
       border-radius: 25px;
-      border-bottom: 3px solid #8f9b91;
+      border: 2px solid #366d2b;
       width: 60%;
       text-align: center;
     }
