--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -140,12 +140,12 @@
       let messageClass = (data.type == 'chat' && data.user_name === user_name) ? 'received' : 'sent';
 
       if (data.type == 'member_count') {
-        document.insertAdjacentHTML('beforeend',
+        document.insertAdjacentHTML('afterbegin',
           `<h2>Members: ${data.member}</h2>`);
       }
 
       if (data.type == 'connection_established') {
-        messages.insertAdjacentHTML('beforeend',
+        messages.insertAdjacentHTML('afterbegin',
           `<div class="${messageClass}">
                             <p class='user_name'>Nz:</p>
                             ${data.message}
@@ -153,7 +153,7 @@
       }
 
       else if (messageClass == 'sent') {
-        messages.insertAdjacentHTML('beforeend',
+        messages.insertAdjacentHTML('afterbegin',
           `<div class="${messageClass}">
                             <p class='user_name'>${data.user_name}:</p>
                             ${data.message}
@@ -161,7 +161,7 @@
       }
 
       else {
-        messages.insertAdjacentHTML('beforeend',
+        messages.insertAdjacentHTML('afterbegin',
           `<div class="${messageClass}">
                             <p class='user_name'>You:</p>
                             ${data.message}
