--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>
-    Lobby
+    {{room_name}} Lobby
   </title>
 
   <style>
@@ -103,7 +103,7 @@
 
   <div class="chat-container">
     <div class="chat-header">
-      <h1>Room: {{room_name}}</h1>
+      <h1>{{room_name}} Lobby</h1>
       <h2></h2>
 
       <div id="alerts"></div>
