--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -9,6 +9,10 @@
   </title>
 
   <style>
+    :root {
+      --mainBdrRadius: 10px;
+    }
+
     body {
       font-family: monospace;
       background-color: #222;
@@ -18,31 +22,36 @@
 
     .chat-container {
       max-width: 650px;
-      font-size: 20px;
+      font-size: 18px;
       color: #ffffff;
       margin: 20px auto;
       border-radius: 5px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       background-color: rgb(127, 173, 130);
-      border-radius: 25px;
+      border-radius: var(--mainBdrRadius);
       
     }
 
     .chat-header {
       background-color: #366d2b;
-      padding: 10px;
       text-align: center;
-      color: #ffffff;
-      border-top-left-radius: 25px;
-      border-top-right-radius: 25px;
+      color: #fff;
+      border-top-left-radius: var(--mainBdrRadius);
+      border-top-right-radius: var(--mainBdrRadius);
+      padding-top: 1px;
+      padding-bottom: 1px;
+    }
+
+    .chat-header h1 {
+      font-size: 20px;
     }
 
     .chat-messages {
       padding: 10px;
       height: 100%;
-      max-height: 70vh;
+      max-height: calc(95vh - 150px);
       overflow-y: scroll;
-      border-radius: 25px;
+      border-radius: var(--mainBdrRadius);
       display: flex;
       flex-direction: column-reverse;
     }
@@ -69,23 +78,23 @@
       display: flex;
       justify-content: space-between;
       padding: 10px;
-      border-bottom-left-radius: 20px;
-      border-bottom-right-radius: 20px;
+      border-bottom-left-radius: var(--mainBdrRadius);
+      border-bottom-right-radius: var(--mainBdrRadius);
       background-color: #fff;
     }
 
     .chat-input input {
       flex: 1;
       padding: 5px;
-      border-radius: 25px;
+      border-radius: var(--mainBdrRadius);
       border: 2px solid #366d2b;
       width: 60%;
     }
 
     .chat-input button {
       margin-left: 10px;
-      padding: 5px 10px;
-      padding-bottom: 2px;
+      padding-left: 8px;
+      padding-right: 8px;
       background-color: #168158;
       color: #fff;
       border: none;
