--- a/chat/templates/chat/create_lobby.html
+++ b/chat/templates/chat/create_lobby.html
@@ -3,18 +3,7 @@
 {% block title %}Anonymous Chats{% endblock %}
 
 {% block css  %}
-<style>
-     .lobbycode a{
-    color: #20af2a;
-    text-decoration: none;
-  }
-  
-  .lobbycode a:hover{
-    text-decoration: underline;
-  }
-    
-</style>
-
+<link rel="stylesheet" href="../../static/styles.css"/>
 {% endblock %}
 
 {% block h1 %} Create your own lobby {% endblock %}
