--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -8,12 +8,12 @@
 {% block div %} 
 <form method="post" action="{% url 'lobby' %}"> {% csrf_token %}
     <label for="name">Just enter a made up name here:</label>
-    <input type="text" id="name" name="name" required>
+    <input class="fw-input" type="text" id="name" name="name" required>
 
     <label for="lobbyCode">Enter lobby code if you got one:</label>
-    <input type="text" id="lobbycode" name="lobbycode" required>
+    <input class="fw-input" type="text" id="lobbycode" name="lobbycode" required>
 
-    <button type="submit">Enter Lobby</button>
+    <button class="fw-button" type="submit">Enter Lobby</button>
 </form>
 
 <div class="create_lobby">
