--- a/chat/templates/chat/create_lobby.html
+++ b/chat/templates/chat/create_lobby.html
@@ -2,29 +2,30 @@
 
 {% block title %}Anonymous Chats{% endblock %}
 
-{% block css  %}
-<link rel="stylesheet" href="../../static/styles.css"/>
+{% block css %}
+<link rel="stylesheet" href="../../static/styles.css" />
 {% endblock %}
 
 {% block h1 %} Create your own lobby {% endblock %}
 
-{% block div %} 
+{% block div %}
 <form method="post" action="{% url 'create_lobby' %}"> {% csrf_token %}
-    
-    <label for="lobby_name">Name your lobby:</label>
-    <input type="text" id="lobby_name" name="lobby_name" value="{{ request.POST.lobby_name }}" required>
 
-    <label for="members">Enter the number of members:</label>
-    <input type="number" id="members" name="members" min="2" max="30" placeholder="2 to 30" value="{{ request.POST.members }}" required>
+  <label for="lobby_name">Name your lobby:</label>
+  <input class="fw-input" type="text" id="lobby_name" name="lobby_name" value="{{ request.POST.lobby_name }}" required>
 
-    <button type="submit">Done</button>
+  <label for="members">Enter the number of members:</label>
+  <input class="fw-input" type="number" id="members" name="members" min="2" max="30" placeholder="2 to 30"
+    value="{{ request.POST.members }}" required>
+
+  <button class="fw-button" type="submit">Done</button>
 
 </form>
 
 {% if lobby_code %}
-    <div class="lobbycode">
-        <p>Your lobby code: {{ lobby_code }}<br> Now go <a href="{% url 'index' %}">back</a> and enter your lobby.</p>
-    </div>
+<div class="lobbycode">
+  <p>Your lobby code: {{ lobby_code }}<br> Now go <a href="{% url 'index' %}">back</a> and enter your lobby.</p>
+</div>
 {% endif %}
 
 {% endblock %}
