--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -8,7 +8,7 @@
 {% block div %}
 <form method="post" action="{% url 'lobby' %}"> {% csrf_token %}
   <label for="name">Just enter a made up name here:</label>
-  <input class="fw-input" type="text" id="name" name="name" required>
+  <input class="fw-input" type="text" id="name" name="name" required maxlength="16">
 
   <label for="lobbyCode">Enter lobby code if you got one:</label>
   <input class="fw-input" type="text" id="lobbycode" name="lobbycode" required>
