fixed overflow on input-container

--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="input-container container" style="max-width: 500px; margin: 0 auto; padding: 20px;">
+  <div class="input-container" >
   <div class="input-box">
     <h1>{% block h1 %} {% endblock %}</h1>
     <h4>{% block h4 %} {% endblock %}</h1>
