--- a/chat/templates/chat/base.html
+++ b/chat/templates/chat/base.html
@@ -1,29 +1,26 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>{% block title  %} {% endblock %}</title>
-
-    <link rel="stylesheet" href="static/styles.css"/>
-
-{% block css  %} {% endblock %}
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %} {% endblock %}</title>
+  <link rel="stylesheet" href="{% static 'styles.css' %}" />
 </head>
 
 <body>
+  <div class="input-container">
+    <div class="input-box">
+      <h1>{% block h1 %} {% endblock %}</h1>
+      <h4>{% block h4 %} {% endblock %}</h1>
 
-  <div class="input-container" >
-  <div class="input-box">
-    <h1>{% block h1 %} {% endblock %}</h1>
-    <h4>{% block h4 %} {% endblock %}</h1>
-
-    {% block div %} {% endblock %}
+        {% block div %} {% endblock %}
+    </div>
   </div>
-</div>
 
-{% block script %} {% endblock %}
+  {% block script %} {% endblock %}
 
 </body>
+
 </html>
