--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -1,13 +1,13 @@
+{% load static %}
 <html>
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>
     {{room_name}} Lobby
   </title>
-  <link rel="stylesheet" href="../static/styles.css" />
+  <link rel="stylesheet" href="{% static 'styles.css' %}" />
 </head>
 
 <body>
