Added word-wrap break word

--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -32,7 +32,7 @@
         
         <button type="submit" id="send-button" class="small-button">Send</button>
       </form>
-      <button class="first-btn small-button">+</button>
+      <button class="first-btn small-button">🙂</button>
     </div>
 
   </div>
@@ -96,7 +96,7 @@
         'message': message,
         'user_name': user_name
       }))
-      // form.reset()
+      form.reset()
     })
 
     new EmojiPicker({
