--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="chat-input">
-      <form id='form' prevent>
+      <form id='form'>
         <input type="text" class="form-control" id="textinput" name="message"
           placeholder="I know you will try your best to be kind...">
         
