refactored lobbies.json to object

--- a/chat/templates/chat/create_lobby.html
+++ b/chat/templates/chat/create_lobby.html
@@ -13,7 +13,7 @@
 
   <label for="members">Enter the number of members:</label>
   <input class="fw-input" type="number" id="members" name="members" min="2" max="30" placeholder="2 to 30"
-    value="{{ request.POST.members }}" required>
+    value="{{ request.POST.num_members }}" required>
 
   <button class="fw-button" type="submit">Done</button>
 
