better variable name for num members

--- a/chat/templates/chat/lobby.html
+++ b/chat/templates/chat/lobby.html
@@ -15,7 +15,7 @@
   <div class="chat-container">
     <div class="chat-header">
       <h1>{{room_name}} Lobby</h1>
-      <div>Max Number of members: {{num_members}}</div>
+      <div>Max Number of members: {{max_num_members}}</div>
       <h2></h2>
 
       <div id="alerts"></div>
